更新前端路由实现，使用 React Router 替代 Wouter，添加登录页面和保护路由功能；优化用户信息和家庭信息的获取逻辑；更新 JWT 处理，增强错误处理和日志记录；添加获取当前用户家庭和书架的 API 接口。

--- a/client/src/locales/zh.json
+++ b/client/src/locales/zh.json
@@ -33,7 +33,8 @@
     "profile": "我的"
   },
   "dashboard": {
-    "welcome": "欢迎回来，{{name}}",
+    "welcome": "欢迎回来, {{user}}",
+    "user": "用户",
     "today": "今天是 {{date}}",
     "addNewBook": "添加新书",
     "totalBooks": "总藏书",
