添加了新的 Maven 插件以复制 React 构建资源，更新了前端依赖项，移除了不再使用的 CSS 和 JS 文件，优化了登录页面和头部组件的身份验证逻辑，增强了 JWT 处理的日志记录，更新了用户信息获取 API，支持多语言功能。

--- a/client/src/locales/zh.json
+++ b/client/src/locales/zh.json
@@ -21,6 +21,7 @@
     "online": "在线",
     "offline": "离线",
     "loadingMembers": "加载成员中...",
+    "noMembersFound": "暂无家庭成员",
     "addNewMember": "添加新家庭成员",
     "inviteFamily": "邀请家人加入您的家庭图书馆",
     "inviteMember": "邀请成员"
