删除不再使用的 CSS 和 JS 文件，添加书籍详细页面路由，更新书籍表单以支持默认 ISBN 值和书架位置选择，优化书籍卡片组件以处理封面图片错误，增强家庭书架和个人书架页面的功能，改进用户体验和错误处理逻辑。

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -167,5 +167,20 @@
     "unknownBook": "Unknown Book",
     "noActivities": "No activities"
   },
-  "addBookshelf": "Add New Bookshelf"
+  "addBookshelf": "Add New Bookshelf",
+  "createFamilyDialog": {
+    "title": "Create New Family",
+    "description": "Create a new family to share bookshelves and books with members.",
+    "familyNameLabel": "Family Name",
+    "familyNamePlaceholder": "e.g., The Smiths",
+    "createButton": "Create Family",
+    "successTitle": "Family Created",
+    "successDescription": "Family \"{{familyName}}\" has been successfully created!",
+    "errorTitle": "Failed to Create Family",
+    "genericError": "An unknown error occurred while creating the family."
+  },
+  "common": {
+    "cancel": "Cancel",
+    "creating": "Creating..."
+  }
 }
