--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -23,7 +23,8 @@
     "loadingMembers": "Loading members...",
     "addNewMember": "Add New Family Member",
     "inviteFamily": "Invite family to join your library",
-    "inviteMember": "Invite Member"
+    "inviteMember": "Invite Member",
+    "scanBook": "Scan Book"
   },
   "mobileNav": {
     "home": "Home",
@@ -178,6 +179,32 @@
     "successDescription": "Family \"{{familyName}}\" has been successfully created!",
     "errorTitle": "Failed to Create Family",
     "genericError": "An unknown error occurred while creating the family."
+  },
+  "scanBook": {
+    "title": "Scan Book",
+    "uploadImage": "Upload Image",
+    "selectImage": "Select Image",
+    "takePhoto": "Take Photo",
+    "captureButton": "Capture",
+    "bookInfo": "Book Information",
+    "bookInfoTitle": "Title",
+    "noBookInfo": "No book information available",
+    "noBookInfoFoundByApi": "Could not recognize book information from the image. Please try another image or enter manually.",
+    "success": "Success",
+    "successDescription": "Book information successfully recognized",
+    "error": "Error",
+    "errorDescription": "Failed to recognize book information, please try again",
+    "cameraNotSupported": "Your device does not support camera functionality",
+    "cameraAccessDenied": "Cannot access camera, please check permissions",
+    "addToLibrary": "Add to Library",
+    "authors": "Authors",
+    "publisher": "Publisher",
+    "publishedDate": "Published Date",
+    "isbn": "ISBN",
+    "unknownAuthor": "Unknown Author",
+    "unknownPublisher": "Unknown Publisher",
+    "unknownDate": "Unknown Date",
+    "unknownIsbn": "Unknown ISBN"
   },
   "common": {
     "cancel": "Cancel",
